# SimMS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  python-package.yml
cudams/: __init__.py  utils.py
cudams/similarity/: CudaCosineGreedy.py  CudaFingerprintSimilarity.py  CudaModifiedCosine.py  __init__.py  spectrum_similarity_functions.py  vector_similarity_functions.py
notebooks/: README.md
notebooks/analysis/: kernel_explained.ipynb
notebooks/figures/: README.md  cudams_diagnostic_plots.ipynb  make_figures.ipynb
notebooks/figures/performance/: 01_MatchMS.ipynb  01_default_params_on_MatchMS.ipynb  02_RTX4090.ipynb  02_default_params_on_Colab_T4.ipynb  03_A100.ipynb  03_default_params_on_RTX4090.ipynb  04_H100.ipynb  04_default_params_on_A100PCIE.ipynb
notebooks/prototyping/: README.md  add_data_files_to_git.ipynb  blink_test.ipynb  compare_cpu_to_cuda.ipynb  cosine_example_Tornike.ipynb  cosine_example_original.ipynb  cuda_heap.ipynb  cusine_cuda_kernel.ipynb  error_analysis.ipynb  main.ipynb  main_cu.ipynb  modified_cosine.ipynb  other_similarities.ipynb  performance_cupy_sparse.ipynb  performance_full_run.ipynb  performance_mergesort_quicksort.ipynb  performance_sparse.ipynb  performance_sparse_file.ipynb  replicate_instability.ipynb  replicate_raw_spectra_errors.ipynb  scratch.ipynb  sparse_standalone.ipynb
notebooks/samples/: colab_tutorial_pesticide.ipynb  default_params_on_rtx4090.ipynb  upload_your_own_mgf.ipynb  vastai_sparse_sample.ipynb
simms/: __init__.py  app.py  cli.py  utils.py
simms/similarity/: CudaCosineGreedy.py  CudaFingerprintSimilarity.py  CudaModifiedCosine.py  __init__.py  spectrum_similarity_functions.py  vector_similarity_functions.py
tests/: builder_Spectrum.py  conftest.py  utils.py
tests/cli/: test_cli.py
tests/data/: pesticides.mgf
tests/performance/: test_cosine_greedy.py
tests/similarity/: test_cosine_greedy.py  test_fingerprint_similarity.py  test_matchms_compatibility.py  test_modified_cosine.py
tests/stress/: test_stress.py
tests/usecase/: test_faq.py  test_sparsity.py  test_tutorial_pesticide.py  test_tutorial_readme_sample.py
