[project]
name = "simms"
version = "0.0.1"
description = "Faster Similarity for Mass Spec on GPU"
authors = [
    {name="Tornike Onoprishvili", email="tornikeonoprishvili@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8,<3.13"
dependencies = [
    "matchms>=0.24",
    "torch~=2",
    "tqdm~=4.66.4",
    "joblib~=1.4.2",
    "requests~=2.32.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
keywords = [
    "similarity measures",
    "mass spectrometry",
    "fuzzy matching",
    "fuzzy search",
    "CUDA",
]

[project.urls]
homepage = "https://github.com/PangeAI/simms"
repository = "https://github.com/PangeAI/simms"
"Bug Tracker" = "https://github.com/PangeAI/simms/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
decorator = "^5.1.1"
isort = "^5.12.0"
pylint = "^2.17.5"
tbb = "^2021.12.0"
pytest-cov = "^4.1.0"
pytest-benchmark = {extras=["histogram"], version="^4.0.0"}
yapf = "^0.40.1"
testfixtures = "^7.1.0"
twine = "^4.0.2"
black = "^23.7.0"

[tool.poetry.group.docs.dependencies]
sphinxcontrib-apidoc = "^0.3.0"
sphinx-rtd-theme = "^1.2.2"
sphinx = "<7"

[tool.poetry_bumpversion.file."simms/__version__.py"]

[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
known_first_party = "simms"
profile = "black"

[tool.nbqa.mypy]
addopts = "--ignore-missing-imports"

[tool.nbqa.isort]
addopts = "--profile=black"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
addopts = "--doctest-modules"
testpaths = [
    "./simms",
    "./tests",
]
markers = [
    "github_ci: marks tests as lightweight-enough to run on a CPU as a github CI",
]
